--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
 body {
   margin: 0;
   padding: 0;
-  font-family: "lato", sans-serif;
+  font-family: lato, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
@@ -27,18 +27,18 @@ h2 {
   padding-right: 50px;
   font-size: 18px;
   font-weight: 700;
-  color: rgb(255, 255, 255);
+  color: #fff;
   text-transform: uppercase;
   line-height: 1.177;
   text-decoration: none;
   border-radius: 3px;
-  background-color: rgb(88, 196, 196);
-  box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.41);
+  background-color: #58c4c4;
+  -webkit-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.41);
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.41);
 }
 .btn:hover {
-  background-color: rgb(59, 128, 128);
+  background-color: #3b8080;
 }
-/*HEADER*/
 .header {
   min-height: 1455px;
   text-align: center;
@@ -57,41 +57,50 @@ h2 {
   margin: 0;
   margin-bottom: 30px;
   font-size: 60px;
-  font-family: "OpenSans" sans-serif;
-  color: rgb(82, 26, 102);
+  font-family: "Open Sans", sans-serif;
+  color: #521a66;
   line-height: 0.8;
 }
 .header-taglie {
   font-size: 20px;
-  color: rgb(113, 58, 132);
+  color: #713a84;
   line-height: 1.5;
 }
 .header-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   width: 980px;
   margin: 0 auto;
 }
 .header-src-to {
+  -webkit-box-ordinal-group: 0;
+  -ms-flex-order: -1;
   order: -1;
 }
 .header-subtitle {
   margin-bottom: 30px;
   font-size: 40px;
-  color: rgb(255, 255, 255);
+  color: #fff;
   line-height: 1.2;
 }
 .header-bottom-text {
   margin-bottom: 30px;
   font-size: 20px;
-  color: rgb(168, 123, 183);
+  color: #a87bb7;
   line-height: 1.65;
 }
-/*PRODUCT*/
 .product {
   padding-top: 110px;
   padding-bottom: 90px;
+  background-image: -o-linear-gradient(315deg, #9242ab, #2b093d);
   background-image: linear-gradient(135deg, #9242ab, #2b093d);
   border-top: 1px solid #360e47;
 }
@@ -110,7 +119,7 @@ h2 {
   right: 0;
   font-size: 12px;
   font-family: Arial, sans-serif;
-  color: rgb(118, 76, 140);
+  color: #764c8c;
 }
 .product-text {
   position: absolute;
@@ -121,21 +130,24 @@ h2 {
 }
 .product-title {
   font-size: 30px;
-  color: rgb(255, 255, 255);
+  color: #fff;
   line-height: 1.6;
 }
 .product-description {
   font-size: 20px;
-  font-family: "Lato";
-  color: rgb(168, 123, 183);
+  font-family: Lato;
+  color: #a87bb7;
   line-height: 1.65;
 }
-/* FEATURES */
 .features {
   padding: 140px 0;
 }
 .features-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .features-column {
@@ -147,21 +159,20 @@ h2 {
 .features-item-title {
   margin: 0 0 30px 0;
   font-size: 15px;
-  font-family: "lato", sans-serif;
-  color: rgb(82, 26, 102);
-  font-weight: bold;
+  font-family: lato, sans-serif;
+  color: #521a66;
+  font-weight: 700;
   text-transform: uppercase;
   line-height: 0.001;
 }
 .features-description {
   font-size: 16px;
-  color: rgb(122, 131, 135);
+  color: #7a8387;
   line-height: 1.875;
 }
-/*DESCRIPTION*/
-.descrition {
-  background-image: url(../images/Layer\ 12.png);
-  background-color: rgb(118, 76, 140);
+.description {
+  background-image: url("../images/Layer\ 12.png");
+  background-color: #764c8c;
   min-height: 450px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -177,13 +188,11 @@ h2 {
   width: 940px;
   margin: 0 auto;
   margin-bottom: 30px;
-  color: antiquewhite;
+  color: #faebd7;
 }
 .description-title {
-  color: antiquewhite;
+  color: #faebd7;
 }
-
-/*ADVANTAGES*/
 .advantages {
   background-color: #fff;
   padding-top: 70px;
@@ -193,7 +202,11 @@ h2 {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   text-align: center;
 }
@@ -213,6 +226,8 @@ h2 {
   position: absolute;
   left: 50%;
   top: 0;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   width: 39px;
   height: 39px;
@@ -229,16 +244,90 @@ h2 {
 .advantages-item-development::before {
   background-image: url(/images/Menu.png);
 }
-
-/*footer*/
-.footer {
-  background-image: url(/images/Rectangle\ 6.png);
-  width: 100%;
-  background-size: cover;
+.footer-top {
+  padding: 15px 0;
+  background-color: #303d4c;
 }
-.social {
+.footer-bottom {
+  padding-top: 40px;
+  padding-bottom: 75px;
+  color: #83969f;
+  background-color: #25303e;
+}
+.footer-text {
+  margin: 0;
+  font-size: 14px;
+  font-family: Lato;
+  color: #83969f;
+  line-height: 2.143;
+}
+.footer-copyright {
+  margin-right: 120px;
+  font-size: 15px;
+  font-family: Lato, sans-serif;
+  color: #83969f;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 0.001;
+}
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
-  text-align: center;
-  padding-bottom: 160px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  margin-right: 80px;
+}
+.social-list {
+  width: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  list-style: none;
+}
+.nav-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 0 20px;
+  width: 50px;
+  height: 50px;
+  background: -o-linear-gradient(135deg, #fff 70%, #0a0a0a 30%);
+  background: linear-gradient(-45deg, #fff 70%, #0a0a0a 30%);
+  background-size: 700%;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+.nav-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 40px;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+.nav-item:hover {
+  background-position: center;
+}
+.nav-link:hover {
+  color: #050505;
 }
